# onnxruntime_custom_op_minimal_example

./: CMakeLists.txt  README
src/: custom_operator copy.cc  custom_operator.cc  custom_operator.cu  custom_operator.h  onnxruntime_custom_ops_config.cmake
